[package]
name = "format_num"
version = "0.1.0"
authors = ["Iulian Gulea <iulian.gulea@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Format numbers into various representations of strings based on a format specifier mini-language."
keywords = ["number", "format", "representation", "num", "convert"]
categories = ["value-formatting", "encoding"]
repository = "https://github.com/askanium/format_num"
readme = "README.md"


[dependencies]
regex = "1.3.6"